--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ src/learners/__pycache__
 src/losses/__pycache__
 src/lr_schedulers/__pycache__
 src/metrics/__pycache__
+src/metrics/utils/__pycache__
 src/models/__pycache__
 src/optimizers/__pycache__
 src/losses/multiclass/__pycache__
